[package]
name = "yoake"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"

[dependencies]
gtk = { version = "0.9", package = "gtk4", features = ["v4_16"] }
adw = { version = "0.7", package = "libadwaita", features = [
    "v1_6",
] }
gtk4-layer-shell = "0.4.0"
libc = "0.2.167"
input = "0.9.1"
anyhow = "1.0.93"
tokio = { version = "1.41", features = ["full"] }
calloop = "0.14.1"
flume = "0.11.1"
xkbcommon = "0.8.0"
once_cell = "1.20.2"

[build-dependencies]
glib-build-tools = "0.20.0"
